fix(links): fix button highlight in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,8 @@ html {
     height: 100%;
     width: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
     background-color: rgb(var(--color-rgb-white));
     z-index: -1;
   }
